5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1636_2724.log
== TEST (2019-04-22 14:10:11) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1,n2,n3)
	
else :
	print(n3, n2, n3)
-- OUTPUT:
258 788 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:10:22) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1,n2,n3)
	
else :
	print(n3, n2, n3)
-- EXECUTION TIME:
0.171759
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258 788 35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99 55 77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123 456 789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:11:14) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)
	
else :
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:11:19) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)
	
else :
	print(n2)
-- EXECUTION TIME:
0.130948
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:11:33) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)
	
else :
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:12:06) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, n2 , n3)
	print(n2)
	
else :
	print(n1, n2, n3)
	print(n2)
-- OUTPUT:
258 788 35
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:12:22) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, n2 , n3)
	
	
else :
	print(n2)
-- OUTPUT:
258 788 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:14:39) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1,n2,n3)
	
else :
	print(n3, n2, n3)
-- OUTPUT:
258 788 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:14:56) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1,n2,n3)
	
else :
	print(n2)
-- OUTPUT:
258 788 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:15:16) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)
	
else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:15:22) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)
	
else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.152362
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:15:55) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, n2, n3)
	
else :
	print(n2)
-- OUTPUT:
258 788 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:23:28) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:23:40) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.192811
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:23:44) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.194072
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:27:15) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.154801
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:27:15) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.185176
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
788
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
788
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:27:16) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.210163
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
788
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:27:16) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.196601
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2724/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:27:16) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:27:33) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:23) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:36:30) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:36:49) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.136676
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:37:18) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, "n2", n3)

else :
	print(n1, n2, n3)
-- OUTPUT:
258 n2 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:37:23) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, "n2", n3)

else :
	print(n1, n2, n3)
-- OUTPUT:
258 n2 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:37:24) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, "n2", n3)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.17535
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258 n2 35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99 n2 77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123 n2 789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:37:33) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:37:39) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
-- EXECUTION TIME:
0.136741
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:38:35) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
	print(n2)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:38:40) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)
	print(n2)
-- EXECUTION TIME:
0.13769
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:39:32) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(abs(n2))

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:39:38) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(abs(n2))

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.132089
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:39:51) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1 ,(abs(n2)), n3

else :
	print(n1, n2, n3)

-- ERROR:
File "XXXX", line 8
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:40:27) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, n2, n3)

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.158202
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258 788 35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
99 55 77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
123 456 789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:41:37) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n1, <n2>, n3)

else :
	print(n1, n2, n3)

-- ERROR:
File "XXXX", line 6
    print(n1, <n2>, n3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:42:14) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.178194
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:42:14) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:42:43) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	print(n2)

else :
	print(x)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:42:48) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	print(n2)

else :
	print(x)

-- EXECUTION TIME:
0.161013
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:43:03) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	y=n2
	print(y)

else :
	print(x)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:43:04) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	y=n2
	print(y)

else :
	print(x)

-- EXECUTION TIME:
0.137744
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:43:05) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	y=n2
	print(y)

else :
	print(x)

-- EXECUTION TIME:
0.152986
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
788
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
788
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:43:05) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	y=n2
	print(y)

else :
	print(x)

-- EXECUTION TIME:
0.152091
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
788
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:43:06) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	x=n1, n2, n3
	y=n2
	print(y)

else :
	print(x)

-- EXECUTION TIME:
0.219653
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1636/2724/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:43:36) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=n1, n2, n3

if (n1 != n2 != n3) :
	
	print(x, n2)

else :
	print(x)

-- OUTPUT:
(258, 788, 35) 788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:43:46) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=n1, n2, n3

if (n1 != n2 != n3) :
	
	print(n2)

else :
	print(x)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:43:51) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=n1, n2, n3

if (n1 != n2 != n3) :
	
	print(n2)

else :
	print(x)

-- EXECUTION TIME:
0.139129
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:44:26) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:08:02) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:08:32) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:08:56) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.293877
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:41:55) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:42:02) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.129276
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:42:23) 
-- CODE:
n1=float(input("numero 1: "))
n2=float(input("numero 2: "))
n3=float(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.178159
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788.0
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55.0
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:42:24) 
-- CODE:
n1=float(input("numero 1: "))
n2=float(input("numero 2: "))
n3=float(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:42:38) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:43:03) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:43:22) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 15:43:23) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 15:43:31) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))

if (n1 != n2 != n3) :
	print(n2)

else :
	print(n1, n2, n3)

-- EXECUTION TIME:
0.19113
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:15:01) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=max(n1,n2,n3)
y=min(ni.n2,n3)
v=n1 + n2+ n3 -x -y
if (n1 != n2 != n3) :
	print(v)

else :
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y=min(ni.n2,n3)
NameError: name 'ni' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:15:13) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=max(n1,n2,n3)
y=min(ni,n2,n3)
v=n1 + n2+ n3 -x -y
if (n1 != n2 != n3) :
	print(v)

else :
	print("Nao tem solucao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y=min(ni,n2,n3)
NameError: name 'ni' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:15:23) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=max(n1,n2,n3)
y=min(n1,n2,n3)
v=n1 + n2+ n3 -x -y
if (n1 != n2 != n3) :
	print(v)

else :
	print("Nao tem solucao")

-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 08:15:30) 
-- CODE:
n1=int(input("numero 1: "))
n2=int(input("numero 2: "))
n3=int(input("numero 3: "))
x=max(n1,n2,n3)
y=min(n1,n2,n3)
v=n1 + n2+ n3 -x -y
if (n1 != n2 != n3) :
	print(v)

else :
	print("Nao tem solucao")

-- EXECUTION TIME:
0.131434
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
